# pobtog

./: .gitattributes  README.md  data.dvc  prompts.txt  pyproject.toml  requirements.txt
data/: countries.json  gpw_v4_admin_unit_center_points_population_estimates_rev11_egy.csv
data/country_boundaries/: ABW.json  AFG.json  AGO.json  AIA.json  ALB.json  AND.json  ARE.json  ARG.json  ARM.json  ASM.json  ATA.json  ATG.json  AUS.json  AUT.json  AZE.json  BDI.json  BEL.json  BEN.json  BES.json  BFA.json  BGD.json  BGR.json  BHR.json  BHS.json  BIH.json  BLM.json  BLR.json  BLZ.json  BMU.json  BOL.json  BRA.json  BRB.json  BRN.json  BTN.json  BWA.json  CAF.json  CAN.json  CHE.json  CHL.json  CHN.json  (+190 more)
data/paper/: df_GER_10k.csv  df_GER_6k.csv  df_USA_10k.csv  df_USA_6k.csv
examples/: GUI.ipynb  short_introduction.ipynb  short_introduction_extended.ipynb  short_introduction_extendedGUI.ipynb
examples/.ipynb_checkpoints/: GUI-checkpoint.ipynb  comprasion-checkpoint.ipynb  demo_logic-checkpoint.ipynb  hierarchy-checkpoint.ipynb  performance-checkpoint.ipynb  short_introduction-checkpoint.ipynb  short_introduction_extended-checkpoint.ipynb  short_introduction_extendedGUI-Copy1-checkpoint.ipynb  short_introduction_old-checkpoint.ipynb
geopop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/.ipynb_checkpoints/: precompute_dualtree-checkpoint.py
src/: demo_logic_calculation.py
src/.ipynb_checkpoints/: config-checkpoint.py  demo_load_only-checkpoint.py
src/algorithms/: __init__.py  hierarchy.py  (+3 more)
webviewer/: README.md  app.py  requirements.txt
(+512 files in other folders)
